Fix schema.sql loading via classpath, clean up imports